--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
         </div>
       </div>
       <h2 class="text-3xl sm:text-4xl md:text-5xl font-bold mt-6 mb-4">Welcome to Spinners Pizza!</h2>
-      <p class="text-lg sm:text-xl mb-6">Grovespring Missouri's local pizzeria, BBQ palace, burger join, and more!</p>
+      <p class="text-lg sm:text-xl mb-6">Grovespring Missouri's local pizzeria, BBQ palace, burger joint, and more!</p>
       <a href="#menu"
         class="bg-primary px-6 py-3 rounded text-lg hover:bg-red-600 transition-colors duration-300">Explore Our
         Menu</a>
